# osv_scanner_lock

./: CMakeLists.txt  README.md  osv-scanner.json
